# root_lab_2023

./: .clang-format  .gitignore  CMakeLists.txt  DefaultParticles.hpp  Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  ResonanceType.cpp  ResonanceType.hpp  analysis.cpp  analysis_cpp.d  analysis_cpp_ACLiC_dict_rdict.pcm  backup.root  generation.cpp  lab1  load.cpp  main_old.cpp  old_save.root  save.root  save1.root  save2.root
